--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,150 @@
+anyio==3.6.2
+apturl==0.5.2
+asgiref==3.2.7
+bcrypt==3.1.7
 blinker==1.6.2
+boto3==1.26.0
+botocore==1.29.45
+Brlapi==0.7.0
+cachetools==4.0.0
 certifi==2022.12.7
+chardet==3.0.4
 charset-normalizer==3.1.0
+cliapp==1.20180812.1
 click==8.1.3
+cmdtest==0.32+git
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+defusedxml==0.6.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+dj-database-url==0.5.0
+Django==3.0.5
+django-allauth==0.42.0
+django-autocomplete-light==3.8.1
+django-bootstrap-modal-forms==2.0.0
+django-common-helpers==0.9.2
+django-cors-headers==3.3.0
+django-crispy-forms==1.9.0
+django-cron==0.5.0
+django-formtools==2.2
+django-heroku==0.3.1
+django-invitations==1.9.3
+django-seed==0.3.1
+django-storages==1.12
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.0
+docopt==0.6.2
+duplicity==0.8.12.0
+entrypoints==0.3
+Faker==15.3.4
+fasteners==0.14.1
 Flask==2.3.1
+future==0.18.2
+google-api-core==2.11.0
+google-api-python-client==1.7.11
+google-auth==2.17.1
+google-auth-httplib2==0.0.3
+google-cloud==0.34.0
+google-cloud-speech==2.19.0
+googleapis-common-protos==1.59.0
+grpcio==1.53.0
+grpcio-status==1.53.0
+gunicorn==20.0.4
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.17.0
+httplib2==0.14.0
+httpx==0.24.0
+hyperframe==6.0.1
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.1.1
 MarkupSafe==2.1.2
+monotonic==1.5
+netifaces==0.10.4
+oauth2client==4.1.2
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.3
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==8.0.0
+pipreqs==0.4.11
+proto-plus==1.22.2
+protobuf==4.22.1
+psycopg2==2.8.5
+psycopg2-binary==2.9.5
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+PyAudio==0.2.11
+pycairo==1.16.2
+pycups==1.9.73
+PyDrive==1.3.1
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+pypdf==3.3.0
+PyPDF2==3.0.1
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.8
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+python3-openid==3.2.0
+pyttsx3==2.90
+pytz==2019.3
+pyxdg==0.26
+PyYAML==6.0
+reportlab==3.5.34
 requests==2.29.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.0
+s3transfer==0.6.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.15.0
+sniffio==1.3.0
+sorl-thumbnail==12.6.3
+SpeechRecognition==3.10.0
+SQLAlchemy==1.3.12
+sqlparse==0.3.1
+systemd-python==234
+toposort==1.7
+ttystatus==0.38
+typing_extensions==4.4.0
+ubuntu-advantage-tools==27.10
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+upgrade-requirements==1.7.0
+uritemplate==0.6
 urllib3==1.26.15
+usb-creator==0.3.7
+wadllib==1.3.3
 Werkzeug==2.3.1
+whitenoise==5.0.1
+xkit==0.0.0
+yarg==0.1.9
 zipp==3.15.0
